--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <section class="bg-green-100 w-3/4 p-8 mx-auto mt-8">
             <h3 class="text-2xl mb-4">Please Login</h3>
             <div>
-                <input id="user-email" class="border block border-gray-400 rounded w-3/4 mb-4 px-2" type="text" placeholder="sontan@baap.com">
-                <input id="user-password" class="border block border-gray-400 rounded w-3/4 mb-4 px-2" type="password" placeholder="secret">
+                <input id="user-email" class="border block border-gray-400 rounded w-3/4 mb-4 px-2" type="text" placeholder="Email (sontan@baap.com)">
+                <input id="user-password" class="border block border-gray-400 rounded w-3/4 mb-4 px-2" type="password" placeholder="password (secret)">
                 <button id="login-submit" class="bg-pink-600 px-4 rounded py-2 text-white font-medium">Submit</button>
             </div>
         </section>
